<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">Information</string>
    <string name="about_empty">There is no information here</string>
    <string name="app_name">Morph TV</string>
    <string name="aspect_icon_description">aspect-ratio</string>
    <string name="authorize_trakt_msg1">Please visit</string>
    <string name="authorize_trakt_msg2">and enter the code:</string>
    <string name="authorize_trakt_title">Trakt Authorize</string>
    <string name="auto_enable_subtitle">Enable subtitles</string>
    <string name="auto_enable_subtitle_summary">Enable the search for subtitles after selecting a source.</string>
    <string name="auto_select_subtitle">Automatically download</string>
    <string name="auto_select_subtitle_summary">Automatically download the best subtitle match.</string>
    <string name="autofetch_dialog_message">Searching best source…</string>
    <string name="autofetch_dialog_message_error">Unable to find a good source.</string>
    <string name="autofetch_dialog_option">Download best source</string>
    <string name="autofetch_dialog_option_next">Download next episode</string>
    <string name="autofetch_dialog_option_not_exist">There are no new episodes</string>
    <string name="autofetch_dialog_option_season">Download all unwatched episodes</string>
    <string name="autoplay_dialog_message_error">Unable to find a source matching your AutoPlay settings.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="pref_autosel_movies_title">AutoPlay for Movies</string>
    <string name="pref_autosel_shows_title">AutoPlay for TV Shows</string>
    <string name="pref_autosel_source_fast">Prefer fast sources</string>
    <string name="pref_autosel_source_fast_summary">Give preference to fast sources (green).</string>
    <string name="pref_autosel_source_host">Preferred Hosts</string>
    <string name="pref_autosel_source_qualtity">Preferred Quality</string>
    <string name="pref_autosel_title">Enable AutoPlay</string>
    <string name="pref_autosel_title_summary">Enabling this will automatically select the best source after a brief search.</string>
    <string name="pref_category_player_options">PLAYER</string>
    <string name="pref_category_providers_list_http">STREAM PROVIDERS</string>
    <string name="pref_category_providers_list_torrent">TORRENT PROVIDERS</string>
    <string name="pref_category_scraping_performance">PERFORMANCE</string>
    <string name="pref_category_sources_list">RESOLVERS</string>
    <string name="pref_category_sources_options">OPTIONS</string>
    <string name="pref_category_subtitles_downloading">OPTIONS</string>
    <string name="pref_category_subtitles_providers">SUBTITLES PROVIDERS</string>
    <string name="pref_category_subtitles_style">STYLE</string>
    <string name="pref_category_torrent_options">OPTIONS</string>
    <string name="pref_downloads_cellular">Download over cellular data</string>
    <string name="pref_downloads_maxsimul">Max. simultaneous downloads</string>
    <string name="pref_header_autoplay">AutoPlay</string>
    <string name="pref_header_downloads">Downloads</string>
    <string name="pref_header_general">Providers</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_player">Player</string>
    <string name="pref_header_sources">Sources</string>
    <string name="pref_header_subtitles">Subtitles</string>
    <string name="pref_header_torrents">Torrents</string>
    <string name="pref_ldivx_password">LegendasDivx Password</string>
    <string name="pref_ldivx_username">LegendasDivx Username</string>
    <string name="pref_provider_123HULU">123HULU</string>
    <string name="pref_provider_123MOVIESFREE">123MOVIESFREE</string>
    <string name="pref_provider_123MOVIESHD">123MOVIESHD</string>
    <string name="pref_provider_123MOVIESHUB">123MOVIESHUB</string>
    <string name="pref_provider_123NETFLIX">PLAYMOVIES</string>
    <string name="pref_provider_123RARBG">123RARBG</string>
    <string name="pref_provider_123YTS">123YTS</string>
    <string name="pref_provider_AFDAH">AFDAH</string>
    <string name="pref_provider_AZMOVIES">AZMOVIES</string>
    <string name="pref_provider_BMOVIESFREE">BMOVIESFREE</string>
    <string name="pref_provider_CARTOONHD">CARTOONHD</string>
    <string name="pref_provider_CINEBLOOM">CINEBLOOM</string>
    <string name="pref_provider_EZTV">EZTV</string>
    <string name="pref_provider_FLIXANITY">FLIXANITY</string>
    <string name="pref_provider_FMOVIES">FMOVIES</string>
    <string name="pref_provider_GOMOVIES">WATCHONLINESC</string>
    <string name="pref_provider_GOMOVIESSC">GOMOVIESSC</string>
    <string name="pref_provider_HDGO">HDGO</string>
    <string name="pref_provider_ICEFILMS">ICEFILMS</string>
    <string name="pref_provider_MOVIETOKEN">MOVIE4K</string>
    <string name="pref_provider_ODBTO">ODB</string>
    <string name="pref_provider_OPENNLOADMOVIES">MEHLIZMOVIES</string>
    <string name="pref_provider_PUTLOCKER">PUTLOCKERSK</string>
    <string name="pref_provider_PUTLOCKERSMOVIES">PUTLOCKERSMOVIES</string>
    <string name="pref_provider_PUTSTREAM">WATCHONLINE</string>
    <string name="pref_provider_RARBG">RARBG</string>
    <string name="pref_provider_REDDIT">REDDIT</string>
    <string name="pref_provider_SCREENCOUCH">SCREENCOUCH</string>
    <string name="pref_provider_SERIESFREE">SERIESFREE</string>
    <string name="pref_provider_SERIESONLINE">SERIES9</string>
    <string name="pref_provider_SOLARMOVIE">SOLARMOVIE</string>
    <string name="pref_provider_STREAMLORD">STREAMLORD</string>
    <string name="pref_provider_STREAMLORD_password">STREAMLORD Password</string>
    <string name="pref_provider_STREAMLORD_username">STREAMLORD Username</string>
    <string name="pref_provider_THEMOVIESERIES">CMOVIESHD</string>
    <string name="pref_provider_THEWATCHSERIES">WATCHSERIESMOVIES</string>
    <string name="pref_provider_TV21">TV21</string>
    <string name="pref_provider_XMOVIES8">XMOVIES8</string>
    <string name="pref_provider_XWATCHSERIES">XWATCHSERIES</string>
    <string name="pref_provider_YESMOVIEIO">YESMOVIEIO</string>
    <string name="pref_provider_YESMOVIES">YESMOVIES</string>
    <string name="pref_provider_YIFY">YTS</string>
    <string name="pref_proxy_streams">Use local streaming proxy</string>
    <string name="pref_proxy_streams_summary">Videos will be streamed through a proxy running on this device.</string>
    <string name="pref_source_ENTERVIDEO">ENTERVIDEO</string>
    <string name="pref_source_GVIDEO">GVIDEO</string>
    <string name="pref_source_LEMONHLS">LEMON HLS</string>
    <string name="pref_source_MCLOUDHLS">MCLOUD HLS</string>
    <string name="pref_source_OPENLOAD">OPENLOAD</string>
    <string name="pref_source_OTHERS">OTHERS</string>
    <string name="pref_source_STREAMANGO">STREAMANGO</string>
    <string name="pref_source_STRMGOHLS">STRMGO HLS</string>
    <string name="pref_source_THEVIDEO">THEVIDEO</string>
    <string name="pref_source_TORRENTS">Enable Torrents</string>
    <string name="pref_source_VIDOZA">VIDOZA</string>
    <string name="pref_source_VIDUP">VIDUP</string>
    <string name="pref_sourcelist_grouping">Group sources by</string>
    <string name="pref_sourcelist_grouping_host">Host</string>
    <string name="pref_subtitle_LEGENDASDIVX">LEGENDASDIVX</string>
    <string name="pref_subtitle_OPENSUBTITLES">OPENSUBTITLES</string>
    <string name="pref_subtitle_TVSUBS">TVSUBS</string>
    <string name="pref_subtitle_bottom">Subtitle bottom distance</string>
    <string name="pref_subtitle_color">Subtitle color</string>
    <string name="pref_subtitle_color_white">White</string>
    <string name="pref_subtitle_primary_lang">Primary language</string>
    <string name="pref_subtitle_secondary_langs">Secondary languages</string>
    <string name="pref_subtitle_text_size">Subtitle text size</string>
    <string name="pref_title_cast_app">Cast Receiver App</string>
    <string name="pref_title_max_buffering">Max. buffer size (seconds)</string>
    <string name="pref_title_max_sources">Max sources per provider</string>
    <string name="pref_title_max_threads">Max simultaneous search threads</string>
    <string name="pref_title_min_buffering">Min. buffer size (seconds)</string>
    <string name="pref_title_playback_buffering">Buffer for playback (seconds)</string>
    <string name="pref_title_timeout">Global search timeout (in seconds)</string>
    <string name="pref_title_timeout_thread">Individual threads timeout (in seconds)</string>
    <string name="pref_torrent_download_limit">Download speed limit (KB/s)</string>
    <string name="pref_torrent_downloadfolderTitle">Download destination folder</string>
    <string name="pref_torrent_downloadfolderTitle2">Destination folder (long click to select)</string>
    <string name="pref_torrent_maxconnections">Max. connections</string>
    <string name="pref_torrent_maxsize_movies">Max. size for Movies (Mb)</string>
    <string name="pref_torrent_maxsize_shows">Max. size for TV-Shows (Mb)</string>
    <string name="pref_torrent_removedownload">Keep downloaded files</string>
    <string name="pref_torrent_removedownloadsummary">Keep the downloaded files on storage after ending the stream.</string>
    <string name="pref_torrent_upload_limit">Upload speed limit (KB/s)</string>
    <string name="pref_validate_sources">Verify sources</string>
    <string name="pref_validate_sources_summary">"Verify found sources to make sure they are not dead links.
Enabling this option will make the scraping process slower."</string>
    <string name="pref_validate_sources_timeout">Verify timeout (seconds)</string>
</resources>